@@ -150,6 +150,7 @@ void poll_host(int host_id, int host_thread, int last_host_thread, int host_data
 	char last_snmp_priv_passphrase[200];
 	char last_snmp_priv_protocol[6];
 	char last_snmp_context[65];
+	double poll_time = get_time_as_double();
 
 	/* reindex shortcuts to speed polling */
 	int previous_assert_failure = FALSE;
@@ -565,7 +566,11 @@ void poll_host(int host_id, int host_thread, int last_host_thread, int host_data
 					if (row[1] != NULL) reindex->action        = atoi(row[1]);
 
 					if (row[2] != NULL) snprintf(reindex->op,           sizeof(reindex->op),           "%s", row[2]);
-					if (row[3] != NULL) snprintf(reindex->assert_value, sizeof(reindex->assert_value), "%s", row[3]);
+
+					if (row[3] != NULL) {
+						db_escape(&mysql, reindex->assert_value, row[3]);
+					}
+
 					if (row[4] != NULL) snprintf(reindex->arg1,         sizeof(reindex->arg1),         "%s", row[4]);
 
 					/* shortcut assertion checks if a data query reindex has already been queued */
@@ -1010,7 +1015,7 @@ void poll_host(int host_id, int host_thread, int last_host_thread, int host_data
 
 				/* process the result */
 				if (IS_UNDEFINED(poll_result)) {
-					snprintf(poller_items[i].result, RESULTS_BUFFER, "%s", poll_result);
+					SET_UNDEFINED(poller_items[i].result);
 				}else if ((is_numeric(poll_result)) || (is_multipart_output(trim(poll_result)))) {
 					snprintf(poller_items[i].result, RESULTS_BUFFER, "%s", poll_result);
 				}else if (is_hexadecimal(snmp_oids[j].result, TRUE)) {
@@ -1026,7 +1031,7 @@ void poll_host(int host_id, int host_thread, int last_host_thread, int host_data
 					}
 				}
 
-				free(poll_result);
+				if (poll_result) free(poll_result);
 
 				SPINE_LOG_MEDIUM(("Host[%i] TH[%i] DS[%i] SCRIPT: %s, output: %s", host_id, host_thread, poller_items[i].local_data_id, poller_items[i].arg1, poller_items[i].result));
 
@@ -1045,7 +1050,7 @@ void poll_host(int host_id, int host_thread, int last_host_thread, int host_data
 
 				/* process the output */
 				if (IS_UNDEFINED(poll_result)) {
-					snprintf(poller_items[i].result, RESULTS_BUFFER, "%s", poll_result);
+					SET_UNDEFINED(poller_items[i].result);
 				}else if ((is_numeric(poll_result)) || (is_multipart_output(trim(poll_result)))) {
 					snprintf(poller_items[i].result, RESULTS_BUFFER, "%s", poll_result);
 				}else if (is_hexadecimal(snmp_oids[j].result, TRUE)) {
@@ -1061,13 +1066,13 @@ void poll_host(int host_id, int host_thread, int last_host_thread, int host_data
 					}
 				}
 
-				free(poll_result);
+				if (poll_result) free(poll_result);
 
 				SPINE_LOG_MEDIUM(("Host[%i] TH[%i] DS[%i] SS[%i] SERVER: %s, output: %s", host_id, host_thread, poller_items[i].local_data_id, php_process, poller_items[i].arg1, poller_items[i].result));
 
 				if (poller_items[i].result != NULL) {
 					/* insert a NaN in place of the actual value if the snmp agent restarts */
-					if ((spike_kill) && (!strstr(poller_items[i].result,":"))) {
+					if ((spike_kill) && (!STRIMATCH(poller_items[i].result,":"))) {
 						SET_UNDEFINED(poller_items[i].result);
 					}
 				}
@@ -1238,6 +1243,10 @@ void poll_host(int host_id, int host_thread, int last_host_thread, int host_data
 	if (host_thread == last_host_thread) {
 		db_query(&mysql, query6);
 	}
+
+	/* record the polling time for the device */
+	poll_time = get_time_as_double() - poll_time;
+	SPINE_LOG_MEDIUM(("Host[%i] TH[%i] Total Time: %5.2g Seconds", host_id, host_thread, poll_time));
 
 	mysql_close(&mysql);
 
