@@ -225,6 +225,8 @@
 #define AVAIL_SNMP 2
 #define AVAIL_PING 3
 #define AVAIL_SNMP_OR_PING 4
+#define AVAIL_SNMP_GET_UPTIME 5
+#define AVAIL_SNMP_GET_SYSDESC 6
 
 #define PING_ICMP 1
 #define PING_UDP 2
@@ -461,6 +463,7 @@ typedef struct host_struct {
 	double availability;
 	int    ignore_host;
 	void   *snmp_session;
+	int    snmp_status;
 } host_t;
 
 /*! Host Reindex Structure
