@@ -35,5 +35,6 @@ extern int db_insert(MYSQL *mysql, const char *query);
 extern MYSQL_RES *db_query(MYSQL *mysql, const char *query);
 extern void db_connect(const char *database, MYSQL *mysql);
 extern void db_disconnect(MYSQL *mysql);
+extern void db_escape(MYSQL *mysql, char *output, const char *input);
 
 extern int append_devicerange(char *obuf, const char *colname);
